internal/xds/translator/testdata/out/xds-ir/load-balancer-backend-utilization-out-of-band.routes.yaml
- ignorePortInHostMatching: true
  name: first-listener
  virtualHosts:
  - domains:
    - '*'
    name: first-listener/*
    routes:
    - match:
        prefix: /
      name: backend-utilization-oob-route
      route:
        cluster: backend-utilization-oob-dest
        upgradeConfigs:
        - upgradeType: websocket
    - match:
        prefix: /
      name: backend-utilization-oob-defaults-route
      route:
        cluster: backend-utilization-oob-defaults-dest
        upgradeConfigs:
        - upgradeType: websocket
